2013-05-30  Russell Harrison  <rharrison@fedoraproject.org> - 0.0.4
  * Specify which files to load and lenes to use for augeas types for major
  performance improvements

2013-05-14  Russell Harrison  <rharrison@fedoraproject.org> - 0.0.3
  * Move to absolute qualification of variables and classes to avoid
  https://projects.puppetlabs.com/issues/17335

2013-01-24  Russell Harrison  <rharrison@fedoraproject.org> - 0.0.2
  * Fix incorrect variable in the mysqldump backupset template
  * Include licence documentation