@@ -1,5 +1,5 @@
 name 'rharrison-holland'
-version '0.0.4'
+version '0.0.5'
 
 author 'rharrison'
 license 'Apache License, Version 2.0'
